infra/logging/eck-operator-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-operator-metrics
  namespace: elastic-system
  labels:
    app.kubernetes.io/name: elastic-operator-metrics
spec:
  selector:
    app.kubernetes.io/name: elastic-operator
  ports:
    - name: metrics
      port: 9090
      targetPort: 9090
